feat: add navbar

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
   --insight-orange: #f4bb28;
   --insight-orange-dark: #efae0b;
   --insight-grey: #545454;
+  --insight-grey-dark: #404040;
   --insight-grey-light: #ced4da;
   --fdr1: #375523;
   --fdr2: #01fc7a;
