--- a/src/index.css
+++ b/src/index.css
@@ -11,14 +11,6 @@
   --fdr5: #80072d;
 }
 
-/* panels - white box that holds content on the page */
-.panel {
-  @apply w-full bg-white rounded-md shadow-md p-4;
-}
-.panel .title {
-  @apply text-lg font-bold mb-2 w-full;
-}
-
 /* fixture difficulty ratings (fdr) */
 .fdr1 {
   @apply text-white;
@@ -39,4 +31,48 @@
 .fdr5 {
   @apply text-white;
   background-color: var(--fdr5);
+}
+
+/* panels - white box that holds content on the page */
+.panel {
+  @apply w-full bg-white rounded-md shadow-md p-4;
+}
+.panel .title {
+  @apply text-lg font-bold mb-2 w-full;
+}
+
+/* inputs and headless-ui components */
+/* combo */
+.combo_input {
+  @apply border border-gray-500 rounded w-full p-2 truncate flex justify-between items-center;
+}
+.combo_options {
+  @apply absolute top-14 z-10 bg-white border border-gray-500 rounded w-full h-60 overflow-y-scroll;
+  max-height: max-content;
+}
+
+/* list */
+.list_button {
+  @apply border border-gray-500 rounded w-full p-2 truncate flex justify-between items-center;
+}
+.list_options {
+  @apply absolute top-16 mt-1 z-10 bg-white border border-gray-500 rounded w-full max-h-60 overflow-auto;
+}
+.list_option {
+  @apply p-2 flex items-center justify-between items-center cursor-pointer hover:bg-gray-200;
+}
+
+/* min max inputs */
+.number_input {
+  @apply border border-gray-500 rounded p-2;
+}
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
